business page, about page phone version

--- a/source/pug/blocks/header.pug
+++ b/source/pug/blocks/header.pug
@@ -16,7 +16,7 @@ mixin header()
                     li.header-menu__item
                         a(href="./delivery.html")  Lite Доставка
                     li.header-menu__item
-                        a(href="") Lite Для Организаций
+                        a(href="./business.html") Lite Для Организаций
                     li.header-menu__item
                         a(href="") Lite для водителей
                     li.header-menu__item
