--- a/source/pug/pages/index.pug
+++ b/source/pug/pages/index.pug
@@ -7,25 +7,25 @@ block content
             .input-form
                 .destination
                     .destination-from
-                        input(type="text" placeholder="Откуда*")
+                        input(type="text" placeholder="Откуда*").workarea-form-input
                     .destination-to
-                        input(type="text", placeholder="Куда")
+                        input(type="text", placeholder="Куда").workarea-form-input
                 .info
                     .info-phone
-                        input(type="tel", placeholder="Телефон")
+                        input(type="tel", placeholder="Телефон").workarea-form-input
                     .info-time
-                        input(type="text", placeholder="Ближайшее время")
+                        input(type="text", placeholder="Ближайшее время").workarea-form-input
                         //- установить конкретное время
                     .info-place
-                        input(type="text", placeholder="Подъезд")
+                        input(type="text", placeholder="Подъезд").workarea-form-input
                 .coments
-                    textarea(name="", placeholder="Коментарий к заказу")
+                    textarea(name="", placeholder="Коментарий к заказу").workarea-form-textarea
             .butns
                 .order-btn
                     a(href="")
-                        input(type="button", value="Вызвать Такси Онлайн")
+                        input(type="button", value="Вызвать Такси Онлайн").workarea-form-input
                 p.butns__or ИЛИ
                 .call-btn
                     a(href="tel:535")
-                        input(type="button", value="Заказать такси по телефону: 535")
+                        input(type="button", value="Заказать такси по телефону: 535").workarea-form-input
     +footer()
