--- a/source/pug/_template.pug
+++ b/source/pug/_template.pug
@@ -9,6 +9,7 @@ html(lang="ru")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         meta(http-equiv="Content-Type" content="text/html; charset=utf-8")
+        //- meta(name="veewport" content="user-scalable=no")
         title Lite Taxi
         link(rel="stylesheet", href="./css/app.css")
     body
