--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -10,6 +10,14 @@ footer {
     & ul {
         display: flex;
         align-items: center;
+        @include phone() {
+            font-size: 12px;
+        }
+    }
+    @include phone() {
+        flex-direction: column;
+        align-items: center;
+        height: auto;
     }
 }
 
@@ -30,7 +38,7 @@ footer {
 }
 
 .menu-item {
-    padding: 8px;
+    padding: 15px 8px;
     & a {
         color: #fff;
         transition: color .3s ease;
@@ -45,5 +53,11 @@ footer {
 .footer-appbuttons {
     & li {
         padding: 0 8px;
+        @include phone() {
+            margin-bottom: 3px;
+        }
+    }
+    & a {
+        display: inline-block;
     }
 }
