--- a/source/sass/helpers/_mixins.scss
+++ b/source/sass/helpers/_mixins.scss
@@ -15,3 +15,74 @@
         transform: translateY(-50%);
     }
 }
+
+// ------------------------------- adaptive ----------------------
+
+@mixin phone() {
+    @media only screen and (max-width: 575px) {
+        @content;
+    }
+}
+@mixin tablet() {
+    @media only screen and (max-width: 768px) {
+        @content;
+    }
+}
+@mixin desktop() {
+    @media only screen and (max-width: 991px) {
+        @content;
+    }
+}
+@mixin maxDesktop() {
+    @media only screen and (max-width: 1199px) {
+        @content;
+    }
+}
+
+
+
+//------------
+
+// @mixin for-phone-only {
+//   @media (max-width: 599px) { @content; }
+// }
+// @mixin for-tablet-portrait-up {
+//   @media (min-width: 600px) { @content; }
+// }
+// @mixin for-tablet-portait-only {
+//   @media (min-width: 600px) and (max-width: 899px) { @content; }
+// }
+// @mixin for-tablet-landscape-up {
+//   @media (min-width: 900px) { @content; }
+// }
+// @mixin for-tablet-landscape-only {
+//   @media (min-width: 900px) and (max-width: 1199px) { @content; }
+// }
+// @mixin for-desktop-up {
+//   @media (min-width: 1200px) { @content; }
+// }
+// @mixin for-desktop-only {
+//   @media (min-width: 1200px) and (max-width: 1799px) { @content; }
+// }
+// @mixin for-big-desktop-up {
+//   @media (min-width: 1800px) { @content; }
+// }
+
+
+
+
+
+
+
+// ---------- Bootstrap 4 ---------------
+
+// @media (min-width: 575px) { ... }
+
+// // Medium devices (tablets, 768px and up)
+// @media (min-width: 768px) { ... }
+
+// // Large devices (desktops, 992px and up)
+// @media (min-width: 991px) { ... }
+
+// // Extra large devices (large desktops, 1200px and up)
+// @media (min-width: 1199px) { ... }
