--- a/source/sass/pages/delivery.scss
+++ b/source/sass/pages/delivery.scss
@@ -2,6 +2,7 @@
     position: relative;
     overflow: hidden;
     height: 100vh;
+    min-height: 600px;
 }
 
 // ------------------------ section 1 ---------------------------
@@ -99,4 +100,12 @@
 
 // ------------------------ section 3 ---------------------------
 
+.del-section3 {
+    height: 75vh;
+}
+
 // ------------------------ section 4 ---------------------------
+
+
+
+
