page for drivers

--- a/source/pug/blocks/header.pug
+++ b/source/pug/blocks/header.pug
@@ -18,7 +18,7 @@ mixin header()
                     li.header-menu__item
                         a(href="./business.html") Lite Для Организаций
                     li.header-menu__item
-                        a(href="") Lite для водителей
+                        a(href="./drivers.html") Lite для водителей
                     li.header-menu__item
                         a(href="")  Блог
             .navigation-right
